add test to credential management and move to __tests__ folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,7 @@
         ],
     },
     "include": [
-        "src/**/*",
-        "__tests__/service.spec.ts"
+        "src/**/*"
     ],
     "exclude": [
         "node_modules",
