--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "colors": "^1.4.0",
+    "dotenv": "^8.2.0",
     "google-auth-library": "^5.5.1",
     "googleapis": "^44.0.0"
   },
