--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./dist/index.js",
   "scripts": {
     "test": "jest",
-    "build": "tsc -p tsconfig.json",
+    "build": "rm -rf ./dist && tsc -p tsconfig.json",
+    "prepublish": "npm run build",
     "lint": "tslint -p tsconfig.json -c tslint.json",
     "lint-fix": "tslint -p tsconfig.json -c tslint.json --fix"
   },
