--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.0.3",
   "description": "Read google sheet and create .env file from sheet column and tab",
   "main": "./dist/index.js",
+  "typings": "./dist/main.d.ts",
   "scripts": {
     "test": "jest",
     "build": "rm -rf ./dist && tsc -p tsconfig.json",
