--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "author": "Stamp",
   "license": "ISC",
   "dependencies": {
+    "@types/lodash": "^4.14.146",
     "colors": "^1.4.0",
     "dotenv": "^8.2.0",
     "google-auth-library": "^5.5.1",
-    "googleapis": "^44.0.0"
+    "googleapis": "^44.0.0",
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
     "@types/jest": "^24.0.22",
