--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   "scripts": {
     "test": "jest",
     "build": "rm -rf ./dist && tsc -p tsconfig.json",
-    "prepublish": "npm run build",
     "lint": "tslint -p tsconfig.json -c tslint.json",
-    "lint-fix": "tslint -p tsconfig.json -c tslint.json --fix"
+    "lint-fix": "tslint -p tsconfig.json -c tslint.json --fix",
+    "validate": "npm run lint && npm run test && npm run build",
+    "prepublish": "npm run validate"
   },
   "author": "Stamp",
   "license": "ISC",
