--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
+    "dev": "nodemon",
     "test": "jest",
     "build": "rm -rf ./dist && tsc -p tsconfig.json",
     "lint": "tslint -p tsconfig.json -c tslint.json",
@@ -15,17 +16,20 @@
   "author": "Stamp",
   "license": "ISC",
   "dependencies": {
-    "@types/lodash": "^4.14.146",
     "colors": "^1.4.0",
     "dotenv": "^8.2.0",
     "google-auth-library": "^5.5.1",
     "googleapis": "^44.0.0",
+    "inquirer": "^7.0.0",
     "lodash": "^4.17.15"
   },
   "devDependencies": {
+    "@types/inquirer": "^6.5.0",
     "@types/jest": "^24.0.22",
+    "@types/lodash": "^4.14.146",
     "@types/node": "^12.12.6",
     "jest": "^24.9.0",
+    "nodemon": "^1.19.4",
     "ts-jest": "^24.1.0",
     "ts-node": "^8.4.1",
     "tslint": "^5.20.1",
