--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "env-from-sheet",
-  "version": "2.0.9",
+  "name": "sheets2env",
+  "version": "1.0.0",
   "description": "Read google sheet and create .env file from sheet column and tab",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
