--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "sheets2env",
   "version": "1.0.0",
   "description": "Read google sheet and create .env file from sheet column and tab",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./dist/app/index.js",
+  "types": "./dist/app/index.d.ts",
+  "bin": "./dist/cli/index.js",
   "scripts": {
-    "dev": "nodemon",
     "test": "jest",
     "build": "rm -rf ./dist && tsc -p tsconfig.json",
     "lint": "tslint -p tsconfig.json -c tslint.json",
