--- a/package.json
+++ b/package.json
@@ -1,28 +1,32 @@
 {
-  "name": "env-from-sheet",
-  "version": "2.0.9",
+  "name": "sheets2env",
+  "version": "1.0.0",
   "description": "Read google sheet and create .env file from sheet column and tab",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./dist/app/index.js",
+  "types": "./dist/app/index.d.ts",
+  "bin": "./dist/cli/index.js",
   "scripts": {
     "test": "jest",
     "build": "rm -rf ./dist && tsc -p tsconfig.json",
-    "prepublish": "npm run build",
     "lint": "tslint -p tsconfig.json -c tslint.json",
-    "lint-fix": "tslint -p tsconfig.json -c tslint.json --fix"
+    "lint-fix": "tslint -p tsconfig.json -c tslint.json --fix",
+    "validate": "npm run lint && npm run test && npm run build",
+    "prepublish": "npm run validate"
   },
   "author": "Stamp",
   "license": "ISC",
   "dependencies": {
-    "@types/lodash": "^4.14.146",
     "colors": "^1.4.0",
     "dotenv": "^8.2.0",
     "google-auth-library": "^5.5.1",
     "googleapis": "^44.0.0",
+    "inquirer": "^7.0.0",
     "lodash": "^4.17.15"
   },
   "devDependencies": {
+    "@types/inquirer": "^6.5.0",
     "@types/jest": "^24.0.22",
+    "@types/lodash": "^4.14.146",
     "@types/node": "^12.12.6",
     "jest": "^24.9.0",
     "ts-jest": "^24.1.0",
