--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "bin": "./dist/cli/index.js",
   "scripts": {
     "test": "jest",
+    "dev": "ts-node ./src/cli/index.ts",
     "build": "rm -rf ./dist && tsc -p tsconfig.json",
     "lint": "tslint -p tsconfig.json -c tslint.json",
     "lint-fix": "tslint -p tsconfig.json -c tslint.json --fix",
@@ -17,7 +18,6 @@
   "license": "ISC",
   "dependencies": {
     "colors": "^1.4.0",
-    "dotenv": "^8.2.0",
     "google-auth-library": "^5.5.1",
     "googleapis": "^44.0.0",
     "inquirer": "^7.0.0",
